<resources>
    <string name="app_name">Submission 1</string>
    <string name="description">url user</string>
    <string name="user_name">nama user</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab2">Following</string>
    <string name="tab1">Followers</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="data_kosong">Data Kosong!</string>
    <string name="username">Username</string>
    <string name="nama">Nama</string>
    <string name="btnback">untuk back</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="todo">TODO</string>
</resources>